
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
struct sockaddr_un {int sun_path; int sun_family; } ;
struct sockaddr {int dummy; } ;
typedef int addr ;


 int AF_UNIX ;
 int MINISSDPC_SOCKET_ERROR ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 int SO_RCVTIMEO ;
 int SO_SNDTIMEO ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int memset (struct sockaddr_un*,int ,int) ;
 int perror (char*) ;
 scalar_t__ setsockopt (int,int ,int ,struct timeval*,int) ;
 int socket (int ,int ,int ) ;
 int strncpy (int ,char const*,int) ;

int
connectToMiniSSDPD(const char * socketpath)
{
 int s;
 struct sockaddr_un addr;




 s = socket(AF_UNIX, SOCK_STREAM, 0);
 if(s < 0)
 {

  perror("socket(unix)");
  return MINISSDPC_SOCKET_ERROR;
 }
 if(!socketpath)
  socketpath = "/var/run/minissdpd.sock";
 memset(&addr, 0, sizeof(addr));
 addr.sun_family = AF_UNIX;
 strncpy(addr.sun_path, socketpath, sizeof(addr.sun_path));

 if(connect(s, (struct sockaddr *)&addr, sizeof(struct sockaddr_un)) < 0)
 {

  close(s);
  return MINISSDPC_SOCKET_ERROR;
 }
 return s;
}
